諸々コミット
